# tuned-llm-android

./: .gitignore  README.md  build.gradle  gradle.properties  kls_database.db  local.properties  settings.gradle
app/: build.gradle
app/schemas/com.brahmadeo.tunedllm.ChatDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/kotlin/com/brahmadeo/tunedllm/: ChatDatabase.kt  ChatModels.kt  ChatScreen.kt  LlmManager.kt  LlmService.kt  LlmViewModel.kt  MainActivity.kt  ModelPickerScreen.kt  Theme.kt  Utils.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
